--- a/particles.html
+++ b/particles.html
@@ -4,7 +4,8 @@
     <title>Particle Simulation</title>  
     <link rel="stylesheet" href="style.css">          
     <script src="aframe-v1.5.0.min.js"></script> 
-    <script src="fps.js"></script>      
+    <script src="fps.js"></script>  
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.9/dat.gui.min.js"></script>    
   </head>
   <body>
     <div class="split bottom">
